# siloxide

./: .gitignore  Cargo.toml  README.md  build.rs
core/: Cargo.toml  build.rs
core/proto/: SiLABinaryTransfer.proto  SiLACloudConnector.proto  SiLAFramework.proto
core/proto/features/core/: SiLAService-v1_0.sila.proto
core/src/: binding.rs  data_types.rs  lib.rs
core/src/mapping/: errors.rs  mod.rs  units.rs
core/src/server/: mod.rs
core/src/sila_domain/: common.rs  error.rs  feature.rs  server_info.rs
examples/: server.rs
feature_definitions/: SiLAService-v1_0.sila.xml
scripts/: generate_proto_from_features.sh
server/examples/: server.rs
src/: binding.rs  lib.rs
src/mapping/: errors.rs  units.rs
src/server/: mod.rs
src/sila_domain/: common.rs  error.rs  mod.rs  server_info.rs
