[package]
name = "siloxide"
version = "0.1.0"
edition = "2021"
authors = ["Florian-David Lange florian-david.lange@smartlab-solutions.de"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.7"
log = "0.4.20"
prost = "0.12.3"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
url = "2.5.0"
uuid = "1.6.1"

[build-dependencies]
tonic-build = "0.10.2"

[dev-dependencies]
env_logger = "0.10.1"
