[workspace]
resolver = "2"
members = [ "client","core", "server"]


[workspace.dependencies]
async-stream = "0.3.5"
prost = "0.13.1"
prost-types = "0.13.1"
regex = "1.5"
serde = {version = "1.0.207", features = ["derive"]}
serde_json = "1.0.124"
tokio = {version = "1.39.2", features = ["full"]}
tonic = "0.12.1"
tonic-reflection = "0.12.1"
tonic-types = "0.12.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
thiserror = "1.0.63"
url = "2.5.0"
uuid = "1.6.1"

